--- a/trunk/LADSArtworkMode/HotspotDetailsControl.xaml
+++ b/trunk/LADSArtworkMode/HotspotDetailsControl.xaml
@@ -10,7 +10,7 @@
              xmlns:my="http://schemas.microsoft.com/surface/2008" xmlns:System_Windows_Documents="clr-namespace:System.Windows.Documents;assembly=PresentationUI" 
              x:Class="LADSArtworkMode.HotspotDetailsControl" 
                        
-        Name="scatterItem" CanScale="False" Height="320" Width="402" Loaded="scatterItem_Loaded" Orientation="0">
+        Name="scatterItem" CanScale="True" Height="320" Width="402" Loaded="scatterItem_Loaded" Orientation="0">
     <!--<UserControl
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:s="http://schemas.microsoft.com/surface/2008"
@@ -111,8 +111,9 @@
                 <Image Name="HotspotImage" Height="272" Width="380"/>
             </s:SurfaceScrollViewer>
 
-            <Canvas x:Name="VideoPanel" Canvas.Top="35" Canvas.Left="11" Visibility="Hidden"> 
-            </Canvas>
+            <s:SurfaceScrollViewer Name="VideoScroll" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="272" Width="380" Canvas.Top="35" Canvas.Left="11" Visibility="Hidden" > 
+               
+            </s:SurfaceScrollViewer>
             <!--<s:SurfaceScrollViewer Name="AudioScroll" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="272" Width="380" Canvas.Top="35" Canvas.Left="12" BorderThickness="2" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Canvas Height="272" Width="380" Name="audioCanvas" HorizontalAlignment="Left" VerticalAlignment="Center" Background="Azure">
                 <MediaElement Name="mediaElement" Width="360" LoadedBehavior="Manual" UnloadedBehavior="Stop" Stretch="Fill" />
