--- a/LADSArtworkMode/HotspotDetailsControl.xaml
+++ b/LADSArtworkMode/HotspotDetailsControl.xaml
@@ -138,23 +138,27 @@
                 <StackPanel HorizontalAlignment="Center" Width="260" Orientation="Horizontal">
                     
                         <s:SurfaceButton Name="PlayButton"  Margin="40,10,10,10" Height="40" Width="40">
-                        <Polygon x:Name ="playIcon" Points="2,0 2,12 14,6" Fill="Green" Opacity=".5" Visibility="Visible"
+                        <Polygon x:Name ="playIcon" Points="4,5 4,32 25,17" Fill="Green" Opacity=".5" Visibility="Visible"
                                 Stroke="Black" StrokeThickness="0.5"
-                                HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                HorizontalAlignment="Center" VerticalAlignment="Center" Height="38" Width="30" />
                         </s:SurfaceButton>
                     <s:SurfaceButton Name="PauseButton"  Margin="10" Height="40" Width="40">
                         <Grid>
-                        <Polygon x:Name="pauseIconLeft" Points="1,0 1,11 6,11, 6,0" Fill="Blue" Opacity=".5" Visibility="Visible"
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="12*" />
+                                <ColumnDefinition Width="0*" />
+                            </Grid.ColumnDefinitions>
+                            <Polygon x:Name="pauseIconLeft" Points="1,0 1,30 6,30, 6,0" Fill="Blue" Opacity=".5" Visibility="Visible"
                             Stroke="Black" StrokeThickness="0.5"
-                            HorizontalAlignment="Left" VerticalAlignment="Center" />
+                            HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,-1" />
 
-                            <Polygon x:Name ="pauseIconRight" Points="6,0 6,11 11,11, 11,0" Fill="Blue" Opacity=".5" Visibility="Visible"
+                            <Polygon x:Name ="pauseIconRight" Points="10,0 10,30 15,30, 15,0" Fill="Blue" Opacity=".5" Visibility="Visible"
                             Stroke="Black" StrokeThickness="0.5"
-                            HorizontalAlignment="Right" VerticalAlignment="Center" />
+                            HorizontalAlignment="Right" VerticalAlignment="Center" Height="34" Margin="0,-1,0,-5" Width="20" Grid.ColumnSpan="2" />
                         </Grid>
                     </s:SurfaceButton>
                     <s:SurfaceButton Name="StopButton"  Margin="10" Height="40" Width="40">
-                        <Polygon x:Name ="stopIcon" Points="0,0 0,11 11,11, 11,0" Fill="Red" Opacity=".5"
+                        <Polygon x:Name ="stopIcon" Points="0,0 0,30 30,30, 30,0" Fill="Red" Opacity=".5"
                         Stroke="Black" StrokeThickness="0.5"
                         HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </s:SurfaceButton>
@@ -163,9 +167,9 @@
                 </StackPanel>
 
                     <Canvas  Width="250" >
-                        <Image Name="Volume" Width="25" Height="25" Canvas.Left="10" />
+                        <Image Name="Volume" Width="32" Height="32" Canvas.Left="-15" />
                     <s:SurfaceSlider Name="volumeSlider" Width="100" Height="25" Background ="#618276" Canvas.Left="35" Minimum="0" Maximum="1" Value="0.5" ValueChanged="volumeSlider_ValueChanged"/>
-                        <Label Name="audioName" Width="150" Height="30" Canvas.Left="120" Foreground="Black"/>
+                        <Label Name="audioName" Width="163" Height="40" Canvas.Left="141" Foreground="Black" Canvas.Top="0" />
                     </Canvas>
                 <!-- Ths slider shows the progress of the media. -->
                             
@@ -208,7 +212,7 @@
         <!--<DocumentViewer x:Name="HotspotsContent" Foreground="Black" Background="White" Margin="1,1,0,0" Height="361" Canvas.Top="37" Width="600" Canvas.Left="-1" Style="{DynamicResource SurfaceDocumentViewerStyle}" /> -->
         <!--</s:SurfaceScrollViewer>-->
         <!-- </Border> -->
-            <Label Content="Label" Height="29" HorizontalAlignment="Left" x:Name="Name" VerticalAlignment="Top" FontSize="16" MinWidth="0" MinHeight="0" Width="283" Padding="5,3,0,0" FontWeight="Bold" Foreground="White" Canvas.Top="3" Canvas.Left="7" />
+            <Label Content="Label" Height="28" HorizontalAlignment="Left" x:Name="Name" VerticalAlignment="Top" FontSize="16" MinWidth="0" MinHeight="0" Width="335" Padding="5,3,0,0" FontWeight="Bold" Foreground="White" Canvas.Top="3" Canvas.Left="7" />
         <my:SurfaceButton  Content="Close" Height="24" HorizontalAlignment="Center" x:Name="closeButton" VerticalAlignment="Center" Width="48" FontSize="11" MinWidth="0" MinHeight="0" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontStyle="Normal" Click="closeButton_Click" Grid.Row="1" Grid.ColumnSpan="2" Canvas.Top="6" Canvas.Left="342" />
        
     </Canvas>
