--- a/trunk/LADSArtworkMode/HotspotDetailsControl.xaml
+++ b/trunk/LADSArtworkMode/HotspotDetailsControl.xaml
@@ -10,109 +10,24 @@
              xmlns:my="http://schemas.microsoft.com/surface/2008" xmlns:System_Windows_Documents="clr-namespace:System.Windows.Documents;assembly=PresentationUI" 
              x:Class="LADSArtworkMode.HotspotDetailsControl" 
                        
-        Name="scatterItem" CanScale="True" Height="320" Width="402" Loaded="scatterItem_Loaded" Orientation="0">
-    <!--<UserControl
-                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:s="http://schemas.microsoft.com/surface/2008"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:my="http://schemas.microsoft.com/surface/2008" xmlns:System_Windows_Documents="clr-namespace:System.Windows.Documents;assembly=PresentationUI" x:Class="LADSArtworkMode.HotspotDetailsControl"
-             mc:Ignorable="d" 
-             d:DesignHeight="319" d:DesignWidth="504" Loaded="UserControl_Loaded">-->
-    
-	<!--<UserControl.Resources>
-		<Style x:Key="SurfaceDocumentViewerStyle" BasedOn="{x:Null}" TargetType="{x:Type DocumentViewer}">
-			<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.WindowTextBrushKey}}"/>
-			<Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
-			<Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-			<Setter Property="ContextMenu" Value="{DynamicResource {ComponentResourceKey ResourceId=PUIDocumentViewerContextMenu, TypeInTargetAssembly={x:Type System_Windows_Documents:PresentationUIStyleResources}}}"/>
-			<Setter Property="Template">
-				<Setter.Value>
-					<ControlTemplate TargetType="{x:Type DocumentViewer}">
-						<Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Focusable="False">
-							<Grid Background="{TemplateBinding Background}" KeyboardNavigation.TabNavigation="Local">
-								<Grid.ColumnDefinitions>
-									<ColumnDefinition Width="*"/>
-								</Grid.ColumnDefinitions>
-								<Grid.RowDefinitions>
-									<RowDefinition Height="Auto"/>
-									<RowDefinition Height="*"/>
-									<RowDefinition Height="Auto"/>
-								</Grid.RowDefinitions>
-
-                            <ToolBar ToolBarTray.IsLocked="True"
-                      Grid.Column="0" Grid.Row="0" TabIndex="0" Width="Auto" Height="27" FontSize="12" Background="#FF001333">
-                                    <Separator />
-                                    <s:SurfaceButton Command="NavigationCommands.IncreaseZoom"
-                      CommandTarget="{Binding RelativeSource={RelativeSource TemplatedParent}}"
-                      Content="Zoom In" FontSize="12" Background="#FF001333" Foreground="White" />
-                                    <s:SurfaceButton Command="NavigationCommands.DecreaseZoom"
-                      CommandTarget="{Binding RelativeSource={RelativeSource TemplatedParent}}"
-                      Content="Zoom Out" FontSize="12" Background="#FF001333" Foreground="White"/>
-                                    <Separator />
-                                    <s:SurfaceButton Command="Zoom"
-                      CommandTarget="{Binding RelativeSource={RelativeSource TemplatedParent}}"
-                      CommandParameter="100.0"
-                      Content="Actual Size" />
-                                    <s:SurfaceButton Command="DocumentViewer.FitToWidthCommand"
-                      CommandTarget="{Binding RelativeSource={RelativeSource TemplatedParent}}"
-                      Content="Fit to Width" FontSize="12" Background="#FF001333" Foreground="White" />
-                                    <s:SurfaceButton Command="DocumentViewer.FitToMaxPagesAcrossCommand"
-                      CommandTarget="{Binding RelativeSource={RelativeSource TemplatedParent}}"
-                      CommandParameter="1"
-                      Content="Whole Page" FontSize="12" Background="#FF001333" Foreground="White" />
-                                    <Separator />
-                                    <s:SurfaceButton Command="ApplicationCommands.Print"
-                      CommandTarget="{Binding RelativeSource={RelativeSource TemplatedParent}}"
-                      Content="Print" FontSize="12" Background="#FF001333" Foreground="White" />
-                                    <s:SurfaceButton Command="ApplicationCommands.Copy"
-                      CommandTarget="{Binding RelativeSource={RelativeSource TemplatedParent}}"
-                      Content="Copy" FontSize="12" Background="#FF001333" Foreground="White" /> 
-                                </ToolBar>
-
-                                <ContentControl Grid.Column="0" Focusable="{TemplateBinding Focusable}" Grid.Row="0" Style="{DynamicResource {ComponentResourceKey ResourceId=PUIDocumentViewerToolBarStyleKey, TypeInTargetAssembly={x:Type System_Windows_Documents:PresentationUIStyleResources}}}" TabIndex="0"/>
-                                <s:SurfaceScrollViewer x:Name="PART_ContentHost" CanContentScroll="true" Grid.Column="0" Focusable="{TemplateBinding Focusable}" HorizontalScrollBarVisibility="Auto" IsTabStop="true" Grid.Row="1" TabIndex="1" Background="#FF001333" BorderBrush="#FF101048" OpacityMask="#FF52529B" />
-								<DockPanel Grid.Row="1">
-									<FrameworkElement DockPanel.Dock="Right" Width="{DynamicResource {x:Static SystemParameters.VerticalScrollBarWidthKey}}"/>
-									<Rectangle Height="10" Visibility="Visible" VerticalAlignment="top">
-										<Rectangle.Fill>
-											<LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-												<LinearGradientBrush.GradientStops>
-													<GradientStopCollection>
-														<GradientStop Color="#66000000" Offset="0"/>
-														<GradientStop Color="Transparent" Offset="1"/>
-													</GradientStopCollection>
-												</LinearGradientBrush.GradientStops>
-											</LinearGradientBrush>
-										</Rectangle.Fill>
-									</Rectangle>
-								</DockPanel>
-								 <ContentControl x:Name="PART_FindToolBarHost" Grid.Column="0" Focusable="{TemplateBinding Focusable}" Grid.Row="2" TabIndex="2"/>
-							</Grid>
-						</Border>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-	</UserControl.Resources> -->
-    <Border BorderBrush="DarkGreen" BorderThickness="1,1,1,1" CornerRadius="10,10,10,10">
-        <Canvas Name="hotspotCanvas" Background="#618276" Opacity="0.8">
+        Name="scatterItem" CanScale="True" Height="320" Width="402" Loaded="scatterItem_Loaded" Orientation="0" SizeChanged="scatterItem_SizeChanged">
+    <Border BorderBrush="#214236" BorderThickness="4" CornerRadius="4">
+        <Canvas Name="hotspotCanvas" Background="#618276" Opacity="0.95">
            
         
         <!-- <Border BorderBrush="Silver" BorderThickness="1"> -->
-            <s:SurfaceScrollViewer Name="textBoxScroll" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="272" Width="380" Canvas.Top="35" Canvas.Left="12" Background="#ccd6c1" BorderThickness="2">
+            <s:SurfaceScrollViewer Name="textBoxScroll" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="272" Width="366" Canvas.Top="35" Canvas.Left="12" Background="#ccd6c1" BorderThickness="2">
                 <s:SurfaceTextBox Name="HotspotTextBox" Height="272" Width="380" TextWrapping="Wrap" IsReadOnly="True" />
             <!-- <DocumentViewer Name="HotspotsContent" Foreground="Black" Background="White" Margin="1,1,0,0" Height="380" Canvas.Top="26" Width="600" Canvas.Left="-1" /> -->
            
             </s:SurfaceScrollViewer>
 
-            <s:SurfaceScrollViewer Name="imageScroll" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="272" Width="380" Canvas.Top="35" Canvas.Left="12" Background="#ccd6c1" BorderThickness="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+            <s:SurfaceScrollViewer Name="imageScroll" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="272" Width="366" Canvas.Top="35" Canvas.Left="12" Background="#ccd6c1" BorderThickness="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
                 <Image Name="HotspotImage" Height="272" Width="380"/>
             </s:SurfaceScrollViewer>
-
-            <s:SurfaceScrollViewer Name="VideoScroll" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="272" Width="380" Canvas.Top="35" Canvas.Left="11" Visibility="Hidden" > 
-               
+            <UserControl Name="video"></UserControl>
+            <s:SurfaceScrollViewer Name="VideoScroll" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="272" Width="366" Canvas.Top="35" Canvas.Left="11" Background="#ccd6c1" BorderThickness="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+                
             </s:SurfaceScrollViewer>
             <!--<s:SurfaceScrollViewer Name="AudioScroll" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="272" Width="380" Canvas.Top="35" Canvas.Left="12" BorderThickness="2" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Canvas Height="272" Width="380" Name="audioCanvas" HorizontalAlignment="Left" VerticalAlignment="Center" Background="Azure">
@@ -213,7 +128,7 @@
         <!--</s:SurfaceScrollViewer>-->
         <!-- </Border> -->
             <Label Content="Label" Height="28" HorizontalAlignment="Left" x:Name="Name" VerticalAlignment="Top" FontSize="16" MinWidth="0" MinHeight="0" Width="335" Padding="5,3,0,0" FontWeight="Bold" Foreground="White" Canvas.Top="3" Canvas.Left="7" />
-        <my:SurfaceButton  Content="Close" Height="24" HorizontalAlignment="Center" x:Name="closeButton" VerticalAlignment="Center" Width="48" FontSize="11" MinWidth="0" MinHeight="0" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontStyle="Normal" Click="closeButton_Click" Grid.Row="1" Grid.ColumnSpan="2" Canvas.Top="6" Canvas.Left="342" />
+        <my:SurfaceButton  Content="Close" Height="24" HorizontalAlignment="Right" x:Name="closeButton" VerticalAlignment="Center" Width="48" FontSize="11" MinWidth="0" MinHeight="0" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontStyle="Normal" Click="closeButton_Click" Grid.Row="1" Grid.ColumnSpan="2" Canvas.Top="6" Canvas.Right="10" />
        
     </Canvas>
  </Border>
